--- a/templates/tmpl_restonic/less/k2-custom.less
+++ b/templates/tmpl_restonic/less/k2-custom.less
@@ -138,8 +138,6 @@
   }
 }
 
-
-
 .itemList {
   clear: left;
 }
@@ -152,7 +150,6 @@
 }
 
 .mattress-item-description {
-  .makeColumn(9, 0);
   z-index: 50;
   position: relative;
   font-size: 0.800em;
@@ -162,12 +159,8 @@
 
 .mattress-item-tip-image {
   .pull-left();
-  padding-right: 10px;
-}
-
-.mattress-item-tip-text {
-  .pull-left();
-  .makeColumn(5);
+  margin-left: 50px;
+  margin-right: 25px;
 }
 
 .tab-content {
