--- a/templates/tmpl_restonic/less/responsive-custom.less
+++ b/templates/tmpl_restonic/less/responsive-custom.less
@@ -15,15 +15,7 @@
   header nav, .mattress-description {
     margin-left: 30px;
   }
-  .mattress-item-description {
-    .makeColumn(10.5);
-    .mattress-item-tip-image {
-      margin-left: 50px;
-    }
-    .mattress-item-tip-text {
-      .makeColumn(6);
-    }
-  }
+
   .mattress-items {
     .makeColumn(7.5);
     .pull-right();
@@ -38,7 +30,6 @@
     .makeColumn(7);
     margin-left: 30px;
   }
-
 }
 
 @media (max-width: 1199px) {
